log
Thu 09 May 2024 04:41:04 PM UTC: 
 tests:  1|8
total_score: 0/70
a329186
Thu 09 May 2024 04:50:57 PM UTC: 
 treemap.c | 13 +++++++++----
 1 file changed, 9 insertions(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
f4c1e8a
Thu 09 May 2024 04:59:27 PM UTC: 
 treemap.c | 55 ++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 54 insertions(+), 1 deletion(-)
 tests:  6|6
total_score: 15/70
0f85f46
Thu 09 May 2024 05:09:01 PM UTC: 
 treemap.c | 33 +++++++++++++++++++++++++++++++--
 1 file changed, 31 insertions(+), 2 deletions(-)
 tests:  13|5
total_score: 25/70
7197f10
Thu 09 May 2024 05:27:25 PM UTC: 
 treemap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
23f111d
Thu 09 May 2024 05:41:12 PM UTC: 
 treemap.c | 54 ++++++++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 52 insertions(+), 2 deletions(-)
 tests:  0|0
aa88817
Thu 09 May 2024 05:42:24 PM UTC: 
 treemap.c | 16 ----------------
 1 file changed, 16 deletions(-)
 tests:  0|0
e8736e4
Thu 09 May 2024 06:01:30 PM UTC: 
 treemap.c | 62 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 62 insertions(+)
 tests:  0|0
a80e3b9
Thu 09 May 2024 06:02:58 PM UTC: 
 treemap.c | 82 ---------------------------------------------------------------
 1 file changed, 82 deletions(-)
 tests:  15|4
total_score: 25/70
4d692ce
Thu 09 May 2024 06:04:52 PM UTC: 
 treemap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  0|0
8ee180f
Thu 09 May 2024 06:07:06 PM UTC: 
 treemap.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  16|4
total_score: 30/70
09571fa
Thu 09 May 2024 06:12:19 PM UTC: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  16|4
total_score: 30/70
21d6019
Thu 09 May 2024 06:22:11 PM UTC: 
 treemap.c | 40 ++++++++++++++++++++++++++++++++++++++++
 1 file changed, 40 insertions(+)
 tests:  18|3
total_score: 40/70
d9efc34
Thu 09 May 2024 06:34:43 PM UTC: 
 treemap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  20|2
total_score: 45/70
dfa9f7f
Thu 09 May 2024 06:56:41 PM UTC: 
 treemap.c | 42 +++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 41 insertions(+), 1 deletion(-)
 tests:  25|1
total_score: 60/70
2967290
Thu 09 May 2024 07:04:57 PM UTC: 
 treemap.c | 27 ++++++++++++++++++++++-----
 1 file changed, 22 insertions(+), 5 deletions(-)
 tests:  25|1
total_score: 60/70
faa1619
Thu 09 May 2024 07:05:05 PM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:239:1: error: control reaches end of non-void function [-Werror=return-type]
  239 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5399919
Thu 09 May 2024 07:06:18 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c:240:1: error: expected identifier or ‘(’ before ‘}’ token
  240 | }
      | ^
treemap.c: In function ‘upperBound’:
treemap.c:238:5: error: control reaches end of non-void function [-Werror=return-type]
  238 |     }
      |     ^
cc1: all warnings being treated as errors
Compilation failed
85f86ef
